Ignoring any line starting with a dot

--- a/dcpu.htm
+++ b/dcpu.htm
@@ -173,13 +173,13 @@
     #screen .f5 {color: #800080;}
     #screen .f6 {color: #808000;}
     #screen .f7 {color: #808080;}
-    #screen .f8 {color: #A0A0A0;}
-    #screen .f9 {color: #A0A0F0;}
-    #screen .fa {color: #A0F0A0;}
-    #screen .fb {color: #A0F0F0;}
-    #screen .fc {color: #F0A0A0;}
-    #screen .fd {color: #F0A0F0;}
-    #screen .fe {color: #F0F0A0;}
+    #screen .f8 {color: #C0C0C0;}
+    #screen .f9 {color: #0000F0;}
+    #screen .fa {color: #00F000;}
+    #screen .fb {color: #00F0F0;}
+    #screen .fc {color: #F00000;}
+    #screen .fd {color: #F000F0;}
+    #screen .fe {color: #F0F000;}
     #screen .ff {color: #F0F0F0;}
 
     #screen .b0 {background-color: #000000;}
@@ -190,13 +190,13 @@
     #screen .b5 {background-color: #800080;}
     #screen .b6 {background-color: #808000;}
     #screen .b7 {background-color: #808080;}
-    #screen .b8 {background-color: #909090;}
-    #screen .b9 {background-color: #A0A0F0;}
-    #screen .ba {background-color: #A0F0A0;}
-    #screen .bb {background-color: #A0F0F0;}
-    #screen .bc {background-color: #F0A0A0;}
-    #screen .bd {background-color: #F0A0F0;}
-    #screen .be {background-color: #F0F0A0;}
+    #screen .b8 {background-color: #C0C0C0;}
+    #screen .b9 {background-color: #0000F0;}
+    #screen .ba {background-color: #00F000;}
+    #screen .bb {background-color: #00F0F0;}
+    #screen .bc {background-color: #F00000;}
+    #screen .bd {background-color: #F000F0;}
+    #screen .be {background-color: #F0F000;}
     #screen .bf {background-color: #F0F0F0;}
 
     #screen .h {visibility: hidden;}
