start refactoring the assembler into its own file.

--- a/dcpu.htm
+++ b/dcpu.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>DCPU-16 emulator</title>
+  <script type="text/javascript" src="assembler.js"></script>
   <script type="text/javascript" src="dcpu.js"></script>
   <script type="text/javascript" src="screen.js"></script>
   <style>
