--- a/dcpu.htm
+++ b/dcpu.htm
@@ -4,6 +4,7 @@
   <script type="text/javascript" src="assembler.js"></script>
   <script type="text/javascript" src="dcpu.js"></script>
   <script type="text/javascript" src="screen.js"></script>
+  <script type="text/javascript" src="test.js"></script>
   <style>
     body, button {
       font-family: Verdana, Tahoma, sans-serif;
@@ -505,85 +506,48 @@
         s = "0" + s;
       return s;
     }
+
     function assemble() {
-      lastCode = ge("code").value;
-      var lines = lastCode.split("\n");
-      var labels = {};
-      var linenums = [];
-      var offsets = [];
-      var dump = [];
+      var lines = ge("code").value.split("\n");
       var log = [];
-      var aborted = false;
-      var logger = function(line, offset, msg, fatal) {
-        log.push("<span class='line'>" + pad(line + 1, 5) + ":</span> " + (fatal ? "(<span class='fatal'>Fatal</span>) " : "") + msg);
-        if (fatal) aborted = true;
-      };
-      // get values of labels
-      var sp = 0;
-      var last = false;
-      memToLine = {};
-      lineToMem = {};
-      for (var i = 0; i < lines.length && !aborted; i++) {
+
+      var linenums = [];
+      for (var i = 0; i < lines.length; i++) {
         linenums.push("<u id=ln" + i + " onclick='bp(" + i + ")'>" + (i + 1) + "</u>");
       }
+
+      var logger = function(line, address, pos, message, fatal) {
+        log.push("<span class='line'>" + pad(line + 1, 5) + ":</span> " +
+          (fatal ? "(<span class='fatal'>Fatal</span>) " : "") +
+          message);
+      };
       for (var i = 0; i < 0xffff; i++) {
         if (memory[i]) memory[i] = 0;
       }
-      for (var i = 0; i < lines.length && !aborted; i++) {
-        var info = DCPU.compileLine(i, sp, lines[i], false, logger);
-        if (aborted) break;
-        if (info.label) {
-          if (DCPU.reserved.indexOf(info.label.toUpperCase()) >= 0) {
-            logger(i, sp, "\"" + info.label + "\" is reserved keyword, you can't use it as label name", true);
-            break;
-          } else if (labels[info.label]) {
-            logger(i, sp, "Duplicate label \"" + info.label + "\"");
-          }
-          if (info.constant !== undefined) {
-            labels[info.label] = info.constant;
+      var rv = Assembler.compile(lines, memory, logger);
+
+      // map line # to address, and build up offsets/dump
+      memToLine = {};
+      lineToMem = {};
+      var offsets = [];
+      var dump = [];
+      if (rv) {
+        for (var i = 0; i < lines.length; i++) {
+          if (rv.infos[i] === undefined || rv.infos[i].size == 0) {
+            offsets.push("");
+            dump.push("");
           } else {
-            labels[info.label] = sp;
+            var info = rv.infos[i];
+            offsets.push(pad(info.pc.toString(16), 4) + ":");
+            lineToMem[i] = info.pc;
+            var s = "";
+            for (var j = 0; j < info.dump.length; j++) {
+              s += pad(info.dump[j].toString(16), 4) + " ";
+              memToLine[info.pc + j] = i + 1;
+            }
+            dump.push(s);
           }
         }
-        if (sp + info.max_size > 0xFFFF) {
-          logger(i, sp, "Code is too big (exceeds 128 Kb), not enough memory", true);
-          break;
-        } else if (sp + info.max_size > 0x8000) {
-          logger(i, sp, "Code is too big (exceeds 64 Kb), overlaps videomemory - there will be glitches on screen)");
-        }
-        if (info.max_size > 0) {
-          lineToMem[i] = sp;
-          offsets.push(pad(sp.toString(16), 4) + ":");
-        } else {
-          offsets.push("");
-        }
-        if (info.org !== undefined) {
-          sp = info.org;
-        } else {
-          sp += info.max_size;
-        }
-      }
-      sp = 0;
-      for (var i = 0; i < lines.length && !aborted; i++) {
-        var info = DCPU.compileLine(i, sp, lines[i], labels, logger);
-        if (aborted) break;
-        var s = "";
-        for (var j = 0; j < info.dump.length; j++) {
-          s += pad(info.dump[j].toString(16), 4) + " ";
-          memory[sp + j] = info.dump[j];
-          memToLine[sp + j] = i + 1;
-        }
-        dump.push(s);
-        if (info.org !== undefined) {
-          sp = info.org;
-        } else {
-          sp += info.max_size;
-        }
-        if (info.op) last = info;
-      }
-      if (aborted) {
-        offsets = [];
-        dump = [];
       }
 
       // update UI
@@ -601,6 +565,7 @@
       }
       updateViews(true);
     }
+
     function disassemble() {
       lastInput = ge("da_input").value;
       var input = lastInput + " ";
