--- a/dcpu.htm
+++ b/dcpu.htm
@@ -1,9 +1,9 @@
 <html>
 <head>
   <title>DCPU-16 emulator</title>
-  <script type="text/javascript" src="assembler.js"></script>
+  <script type="text/javascript" src="js/assembler.js"></script>
   <script type="text/javascript" src="js/dcpu.js"></script>
-  <script type="text/javascript" src="screen.js"></script>
+  <script type="text/javascript" src="js/screen.js"></script>
   <style>
     body, button {
       font-family: Verdana, Tahoma, sans-serif;
