--- a/dcpu.htm
+++ b/dcpu.htm
@@ -206,6 +206,15 @@
       float: right;
       margin-top: 19px;
     }
+    #screen_wrapper {
+      position: relative;
+    }
+    #loading_overlay {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      margin: 4px;
+    }
   </style>
 </head>
 <body>
@@ -321,7 +330,10 @@ echo htmlspecialchars($code);?></textarea>
     <button onclick="run(this)" id="button_run" class="big"/>&#8595; Run (F5)</button><button onclick="step()"  class="big"/>&#8618; Step (F6)</button><button onclick="reset()" class="big">&#8634; Reset</button><br/>
     <label for="show_pc"><input type="checkbox" id="show_pc" name="show_pc" checked="checked" onchange="toggleShowPC()"/> Show current line</label>
     <h4>Screen:</h4>
-    <canvas id="screen" width="384" height="288"></canvas>
+    <div id="screen_wrapper">
+      <canvas id="screen" width="384" height="288"></canvas>
+      <img id="loading_overlay" src="http://i.imgur.com/DcNzS.png" width="384" height="288"/>
+    </div>
     <div class="notice">Keyboard input is available while the program is running.</div>
     <h4>Registers:</h4>
     <table border=0 class="editor">
@@ -360,6 +372,7 @@ echo htmlspecialchars($code);?></textarea>
   <div id="log" class="editor"></div></td>
   </tr></table>
   <script language="javascript">
+    var startup = (new Date()).getTime();
     var cycles = 0;
     var memory = [];
     var registers = {A: 0, B: 0, C: 0, X: 0, Y: 0, Z: 0, I: 0, J: 0, PC: 0, SP: 0, EX: 0, IA: 0};
@@ -487,7 +500,8 @@ echo htmlspecialchars($code);?></textarea>
     }
 
     function step() {
-      var rv = DCPU.step(memory, registers, []);
+      ge('loading_overlay').style.display = 'none';
+      var rv = DCPU.step(memory, registers, [Screen]);
       if (rv > 0) {
         cycles += rv;
       }
@@ -496,6 +510,7 @@ echo htmlspecialchars($code);?></textarea>
 
     var runningTimer = false;
     function run(button) {
+      ge('loading_overlay').style.display = 'none';
       if (runningTimer) {
         clearInterval(runningTimer);
         runningTimer = false;
@@ -505,7 +520,7 @@ echo htmlspecialchars($code);?></textarea>
         runningTimer = setInterval(function() {
           var was_cycles = cycles;
           for (var i = 0; i < 10000; i++) {
-            var rv = DCPU.step(memory, registers, []);
+            var rv = DCPU.step(memory, registers, [Screen]);
             if (rv < 0) { // break
               if (runningTimer) run(button);
               return;
