Added versions to js urls to prevent caching

--- a/dcpu.htm
+++ b/dcpu.htm
@@ -1,9 +1,9 @@
 <html>
 <head>
   <title>DCPU-16 emulator</title>
-  <script type="text/javascript" src="js/assembler.js"></script>
-  <script type="text/javascript" src="js/dcpu.js"></script>
-  <script type="text/javascript" src="js/screen.js"></script>
+  <script type="text/javascript" src="js/assembler.js?v=1"></script>
+  <script type="text/javascript" src="js/dcpu.js?v=1"></script>
+  <script type="text/javascript" src="js/screen.js?v=1"></script>
   <style>
     body, button {
       font-family: Verdana, Tahoma, sans-serif;
